--- a/index.html
+++ b/index.html
@@ -23,8 +23,28 @@
 </head>
 
 <body>
+    <div class="info_form_wrapper">
+        <div class="logo_container">
+            <img class="logo" src="IMG/logo.png" alt="RRR Logo" />
+        </div>
+        <div class="header_copy_wrapper">
+            <h1>Request Your <span>Local Home Window</span> Estimates</h1>
+            <p>Tell us about your window project.</p>
+        </div>
+        <div class="form_wrapper">
+            <label for="fname">First Name<span>*</span></label>
+            <input type="text" id="fname" name="firstname">
+            <label for="lname">Last Name<span>*</span></label>
+            <input type="text" id="lname" name="lastname">
+            <label for="projectAddress">Project Address<span>*</span></label>
+            <input type="text" id="lname" name="projectAddress">
+            <label for="pnumber">Phone Number<span>*</span></label>
+            <input type="text" id="lname" name="pnumber">
+            <label for="pnumber">Email Address<span>*</span></label>
+            <input type="text" id="lname" name="pnumber">
+            <input type="submit" value="See Estimates!">
+        </div>
+    </div>
 
 
-</body>
-
-</html>
+</body></html>
