--- a/index.html
+++ b/index.html
@@ -44,6 +44,31 @@
             <input type="text" id="lname" name="pnumber">
             <input type="submit" value="See Estimates!">
         </div>
+        <div class="BBB_container">
+            <img src="IMG/bbb-seal-horizontal.png" alt="RRR Logo" />
+        </div>
+        <div class="fine_print_wrapper">
+            <p>By clicking See Estimates, I agree to the <a href="#">Terms of Use</a> and <a href="#">Privacy Policy</a> and authorize RemodelRepairReplace.com and up to <a href="#">four home service companies</a>, including ImproveNet, CraftJack, HomeAdvisor Powered by Angi, their contractors, partners and affiliates to contact me with offers about their products or services by telephone calls, emails, artificial voice, and pre-recorded calls/text messages, using an automated telephone technology, to the number and email I provided above, even if my number is a mobile number or is currently listed on any state, federal or corporate Do Not Call list. I understand that my consent here is not a condition of purchase, and that I can revoke it at any time. Message and data rates may apply.</p>
+        </div>
+        <div class="footer_container">
+            <ul class="footer_side">
+                <li><a href="#">home</a></li>
+                <li><a href="#">company information</a></li>
+                <li><a href="#">terms of use</a></li>
+                <li><a href="#">privacy policy</a></li>
+                <li><a href="#">cookie policy</a></li>
+            </ul>
+            <ul class="footer_side">
+                <li><a href="#">vulnerability policy</a></li>
+                <li><a href="#">contractors sign up</a></li>
+                <li><a href="#">accessibility policy</a></li>
+                <li><a href="#">do not sell my personal information</a></li>
+                <li><a href="#">contact us</a></li>
+            </ul>
+        </div>
+        <div class="lower_footer_container">
+            <p>© 2021 RemodelRepairReplace.com. A <a href="#">Buyerlink</a> Service. All Rights Reserved.</p>
+        </div>
     </div>
 
 
