--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
             <input type="text" id="fname" name="firstname">
             <label for="lname">Last Name<span>*</span></label>
             <input type="text" id="lname" name="lastname">
-            <label for="projectAddress">Project Address<span>*</span></label>
-            <input type="text" id="lname" name="projectAddress">
+            <div class="project_address_wrapper">
+                <label for="projectAddress">Project Address<span>*</span></label>
+                <input type="text" id="lname" name="projectAddress">
+                <p class="location_label">Elmendorf Air Force Base, AK</p>
+            </div>
             <label for="pnumber">Phone Number<span>*</span></label>
             <input type="text" id="lname" name="pnumber">
             <label for="pnumber">Email Address<span>*</span></label>
