--- a/index.html
+++ b/index.html
@@ -27,25 +27,27 @@
         <div class="logo_container">
             <img class="logo" src="IMG/logo.png" alt="RRR Logo" />
         </div>
-        <div class="header_copy_wrapper">
-            <h1>Request Your <span>Local Home Window</span> Estimates</h1>
-            <p>Tell us about your window project.</p>
-        </div>
-        <div class="form_wrapper">
-            <label for="fname">First Name<span>*</span></label>
-            <input type="text" id="fname" name="firstname">
-            <label for="lname">Last Name<span>*</span></label>
-            <input type="text" id="lname" name="lastname">
-            <div class="project_address_wrapper">
-                <label for="projectAddress">Project Address<span>*</span></label>
-                <input type="text" id="lname" name="projectAddress">
-                <p class="location_label">Elmendorf Air Force Base, AK</p>
+        <div class="main_content_wrapper">
+            <div class="header_copy_wrapper">
+                <h1>Request Your <span>Local Home Window</span> Estimates</h1>
+                <p>Tell us about your window project.</p>
             </div>
-            <label for="pnumber">Phone Number<span>*</span></label>
-            <input type="text" id="lname" name="pnumber">
-            <label for="pnumber">Email Address<span>*</span></label>
-            <input type="text" id="lname" name="pnumber">
-            <input type="submit" value="See Estimates!">
+            <div class="form_wrapper">
+                <label for="fname">First Name<span>*</span></label>
+                <input type="text" id="fname" name="firstname">
+                <label for="lname">Last Name<span>*</span></label>
+                <input type="text" id="lname" name="lastname">
+                <div class="project_address_wrapper">
+                    <label for="projectAddress">Project Address<span>*</span></label>
+                    <input type="text" id="lname" name="projectAddress">
+                    <p class="location_label">Elmendorf Air Force Base, AK 99506</p>
+                </div>
+                <label for="pnumber">Phone Number<span>*</span></label>
+                <input type="text" id="lname" name="pnumber">
+                <label for="pnumber">Email Address<span>*</span></label>
+                <input type="text" id="lname" name="pnumber">
+                <input type="submit" value="See Estimates!">
+            </div>
         </div>
         <div class="BBB_container">
             <img src="IMG/bbb-seal-horizontal.png" alt="RRR Logo" />
