--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <input type="text" id="lname" name="pnumber">
                 <label for="pnumber">Email Address<span>*</span></label>
                 <input type="text" id="lname" name="pnumber">
-                <input type="submit" value="See Estimates!">
+                <button class="CTA">See Estimates!</button>
             </div>
         </div>
         <div class="BBB_container">
