--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                     <p class="location_label">Elmendorf Air Force Base, AK 99506</p>
                 </div>
                 <label for="pnumber">Phone Number<span>*</span></label>
-                <input type="text" id="lname" name="pnumber">
+                <input type="tel" id="lname" maxlength="10" name="pnumber">
                 <label for="pnumber">Email Address<span>*</span></label>
-                <input type="text" id="lname" name="pnumber">
+                <input type="email" id="lname" name="pnumber">
                 <button class="CTA">See Estimates!</button>
             </div>
         </div>
