--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
             </div>
             <div class="form_wrapper">
                 <label for="fname">First Name<span>*</span></label>
-                <input type="text" id="fname" name="firstname">
+                <input class="input_field" type="text" id="fname" name="firstname">
                 <label for="lname">Last Name<span>*</span></label>
-                <input type="text" id="lname" name="lastname">
+                <input class="input_field" type="text" id="lname" name="lastname">
                 <div class="project_address_wrapper">
                     <label for="projectAddress">Project Address<span>*</span></label>
-                    <input type="text" id="lname" name="projectAddress">
+                    <input class="input_field" type="text" id="lname" name="projectAddress">
                     <p class="location_label">Elmendorf Air Force Base, AK 99506</p>
                 </div>
                 <label for="pnumber">Phone Number<span>*</span></label>
-                <input type="tel" id="lname" maxlength="10" name="pnumber">
+                <input class="input_field" type="tel" id="lname" maxlength="10" name="pnumber">
                 <label for="pnumber">Email Address<span>*</span></label>
-                <input type="email" id="lname" name="pnumber">
+                <input class="input_field" type="email" id="lname" name="pnumber">
                 <button class="CTA">See Estimates!</button>
             </div>
         </div>
